--- a/imagoweb/templates/home/account.html
+++ b/imagoweb/templates/home/account.html
@@ -29,9 +29,9 @@
         </div>
         
         {% if not superuser %}
-            <button type="submit" class="submit-button blue-button" onclick="edit_user('{{ user.user_id }}')">Save Changes</button>
+            <button type="submit" id="edit-button" class="submit-button blue-button" onclick="edit_user('{{ user.user_id }}')">Save Changes</button>
         {% else %}
-            <button type="submit" class="submit-button blue-button blocked" onclick="edit_user('{{ user.user_id }}')">Save Changes</button>
+            <button type="submit" id="edit-button" class="submit-button blue-button blocked" onclick="edit_user('{{ user.user_id }}')">Save Changes</button>
         {% endif %}
     </div>
 {% endblock %}
