Fully setup localization

--- a/imagoweb/templates/admin/base.html
+++ b/imagoweb/templates/admin/base.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block head_title %}
-    <title>Imago - Admin Panel</title>
+    <title>{{ locale.admin.TITLE }}</title>
 {% endblock %}
 
 {% block base_body_content %}
