--- a/imagoweb/templates/admin/extends/sidenav.html
+++ b/imagoweb/templates/admin/extends/sidenav.html
@@ -1,4 +1,4 @@
 <div class="sidenav">
-    <a class="sidenav-item" href="/home/admin"><i class="fas fa-user"></i> &nbsp;&nbsp;Users</a>
-    <a class="sidenav-item" href="/home/admin/images"><i class="fas fa-image"></i> &nbsp;&nbsp;Images</a>
+    <a class="sidenav-item" href="/home/admin"><i class="fas fa-user"></i> &nbsp;&nbsp;{{ locale.admin.nav.USERS }}</a>
+    <a class="sidenav-item" href="/home/admin/images"><i class="fas fa-image"></i> &nbsp;&nbsp;{{ locale.admin.nav.IMAGES }}</a>
 </div>
