--- a/imagoweb/templates/home/base.html
+++ b/imagoweb/templates/home/base.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block head_title %}
-    <title>Imago - Home</title>
+    <title>{{ locale.home.TITLE }}</title>
 {% endblock %}
 
 {% block base_body_content %}
