--- a/imagoweb/templates/admin/edit.html
+++ b/imagoweb/templates/admin/edit.html
@@ -3,18 +3,18 @@
 {% block body_content %}
     <div class="side-container">
         <div class="field-container">
-            <div class="input-header" id="username-header">USERNAME</div>
+            <div class="input-header" id="username-header">{{ locale.admin.form.USERNAME }}</div>
             <input class="input-box" id="username-box" type="text" placeholder value onfocus="this.removeAttribute('readonly');" readonly>
         </div>
         <div class="field-container">
-            <div class="input-header" id="password-header">PASSWORD</div>
+            <div class="input-header" id="password-header">{{ locale.admin.form.PASSWORD }}</div>
             <input class="input-box" id="password-box" type="password" placeholder value onfocus="this.removeAttribute('readonly');" readonly>
         </div>
         <div class="field-container">
-            <div class="input-header" id="display-header">DISPLAY NAME</div>
+            <div class="input-header" id="display-header">{{ locale.admin.form.DISPLAY_NAME }}</div>
             <input class="input-box" id="display-box" type="text" placeholder value onfocus="this.removeAttribute('readonly');" readonly>
         </div>
         
-        <button type="submit" class="submit-button blue-button" onclick="edit_user('{{ victim.user_id }}')">Edit User</button>
+        <button type="submit" class="submit-button blue-button" onclick="edit_user('{{ victim.user_id }}')">{{ locale.admin.buttons.EDIT_USER }}</button>
     </div>
 {% endblock %}
