--- a/imagoweb/templates/admin/new.html
+++ b/imagoweb/templates/admin/new.html
@@ -3,29 +3,26 @@
 {% block body_content %}
     <div class="side-container">
         <div class="field-container">
-            <div class="input-header" id="username-header">USERNAME</div>
+            <div class="input-header" id="username-header">{{ locale.admin.form.USERNAME }}</div>
             <input class="input-box" id="username-box" type="text" placeholder value onfocus="this.removeAttribute('readonly');" readonly>
         </div>
         <div class="field-container">
-            <div class="input-header" id="password-header">PASSWORD</div>
+            <div class="input-header" id="password-header">{{ locale.admin.form.PASSWORD }}</div>
             <input class="input-box" id="password-box" type="password" placeholder value onfocus="this.removeAttribute('readonly');" readonly>
         </div>
         <div class="field-container">
-            <div class="input-header" id="display-header">DISPLAY NAME</div>
+            <div class="input-header" id="display-header">{{ locale.admin.form.DISPLAY_NAME }}</div>
             <input class="input-box" id="display-box" type="text" placeholder value>
         </div>
         {% if is_superuser %}
-            <label class="check-container">Grant Administrator permissions
+            <label class="check-container">{{ locale.admin.form.GRANT_ADMIN }}
                 <input class="check-box" id="admin-box" type="checkbox">
                 <span class="checkmark"></span>
             </label>
         {% else %}
-            <label class="check-container" style="display: none;">Grant Administrator permissions
-                <input class="check-box" id="admin-box" type="checkbox">
-                <span class="checkmark"></span>
-            </label>
+            <input class="check-box" id="admin-box" style="display: none;" type="checkbox">
         {% endif %}
         
-        <button type="submit" class="submit-button blue-button" onclick="new_user()">Create User</button>
+        <button type="submit" class="submit-button blue-button" onclick="new_user()">{{ locale.admin.buttons.CREATE_USER }}</button>
     </div>
 {% endblock %}
