--- a/imagoweb/templates/base.html
+++ b/imagoweb/templates/base.html
@@ -12,7 +12,7 @@ Copyright (C) Mila Software Group 2018-2020
     {% endblock %}
 
     {% block head_title %}
-        <title>Imago</title>
+        <title>{{ locale.base.TITLE }}</title>
     {% endblock %}
 </head>
 <body>
