--- a/imagoweb/templates/home/extends/sidenav.html
+++ b/imagoweb/templates/home/extends/sidenav.html
@@ -1,4 +1,4 @@
 <div class="sidenav">
-    <a class="sidenav-item" href="/home"><i class="fas fa-user"></i> &nbsp;&nbsp;Account</a>
-    <a class="sidenav-item" href="/home/images"><i class="fas fa-image"></i> &nbsp;&nbsp;Images</a>
+    <a class="sidenav-item" href="/home"><i class="fas fa-user"></i> &nbsp;&nbsp;{{ locale.home.nav.ACCOUNT }}</a>
+    <a class="sidenav-item" href="/home/images"><i class="fas fa-image"></i> &nbsp;&nbsp;{{ locale.home.nav.IMAGES }}</a>
 </div>
