--- a/imagoweb/templates/login.html
+++ b/imagoweb/templates/login.html
@@ -8,23 +8,23 @@
 {% endblock %}
 
 {% block head_title %}
-    <title>Imago - Login</title>
+    <title>{{ locale.login.TITLE }}</title>
 {% endblock %}
 
 {% block base_body_content %}
     <div class="login-container">
-        <div class="banner red-banner white-text">An invalid username or password was provided.</div>
+        <div class="banner red-banner white-text">{{ locale.login.form.INVALID_CREDS }}</div>
 
         <div class="field-container">
-            <div class="input-header" id="username-header">USERNAME</div>
+            <div class="input-header" id="username-header">{{ locale.login.form.USERNAME }}</div>
             <input class="input-box" id="username-box" type="text" placeholder value>
         </div>
         <div class="field-container">
-            <div class="input-header" id="password-header">PASSWORD</div>
+            <div class="input-header" id="password-header">{{ locale.login.form.PASSWORD }}</div>
             <input class="input-box" id="password-box" type="password" placeholder value>
         </div>
         
-        <button type="submit" class="submit-button blue-button" onclick="login()">Login</button>
+        <button type="submit" class="submit-button blue-button" onclick="login()">{{ locale.login.buttons.LOGIN }}</button>
     </div>
 {% endblock %}
 
