Support different file types & add file archiving

--- a/imagoweb/templates/admin/extends/sidenav.html
+++ b/imagoweb/templates/admin/extends/sidenav.html
@@ -1,4 +1,5 @@
 <div class="sidenav">
     <a class="sidenav-item" href="/home/admin"><i class="fas fa-user"></i> &nbsp;&nbsp;{{ locale.admin.nav.USERS }}</a>
-    <a class="sidenav-item" href="/home/admin/images"><i class="fas fa-image"></i> &nbsp;&nbsp;{{ locale.admin.nav.IMAGES }}</a>
+    <a class="sidenav-item" href="/home/admin/files"><i class="fas fa-file-alt"></i> &nbsp;&nbsp;{{ locale.admin.nav.FILES }}</a>
+    <a class="sidenav-item" href="/home/admin/archive"><i class="fas fa-archive"></i> &nbsp;&nbsp;{{ locale.admin.nav.ARCHIVE }}</a>
 </div>
