--- a/imagoweb/templates/admin/files.html
+++ b/imagoweb/templates/admin/files.html
@@ -4,26 +4,26 @@
     <div class="side-container">
         <table class="side-table">
             <tr>
-                <th>{{ locale.admin.tables.IMAGE_ID }}</th>
+                <th>{{ locale.admin.tables.FILE_ID }}</th>
                 <th>{{ locale.admin.tables.DISCRIMINATOR }}</th>
                 <th>{{ locale.admin.tables.AUTHOR }}</th>
                 <th>{{ locale.admin.tables.UPLOAD_DATE }}</th>
                 <th>{{ locale.admin.tables.ACTIONS }}</th>
             </tr>
-            {% for i in images %}
+            {% for i in files %}
                 <tr id="{{ i.discrim }}">
-                    <td>{{ i.image_id }}</td>
+                    <td>{{ i.file_id }}</td>
                     <td><a href="{{ url_for('static', filename='uploads/' + i.discrim) }}">{{ i.discrim }}</a></td>
                     <td>{{ i.owner.username }}</td>
                     <td>{{ i.created_at_friendly }}</td>
                     <td>
                         {% if i.owner.user_id not in (user.user_id, superuser_id) and (not i.owner.is_admin or superuser)  %}
-                            <button class="action-button red-button tooltip" onclick="delete_image('{{ i.discrim }}')">
+                            <button class="action-button red-button tooltip" onclick="delete_file('{{ i.discrim }}')">
                                 <i class="fas fa-trash"></i>
-                                <span class="tooltiptext">{{ locale.admin.buttons.DELETE_IMAGE }}</span>
+                                <span class="tooltiptext">{{ locale.admin.buttons.DELETE_FILE }}</span>
                             </button>
                         {% else %}
-                        {{ locale.admin.tables.NO_IMAGE_ACTIONS }}
+                        {{ locale.admin.tables.NO_FILE_ACTIONS }}
                         {% endif %}
                     </td>
                 </tr>
