--- a/imagoweb/templates/home/files.html
+++ b/imagoweb/templates/home/files.html
@@ -4,20 +4,20 @@
     <div class="side-container">
         <table class="side-table">
             <tr>
-                <th>{{ locale.home.tables.IMAGE_ID }}</th>
+                <th>{{ locale.home.tables.FILE_ID }}</th>
                 <th>{{ locale.home.tables.DISCRIMINATOR }}</th>
                 <th>{{ locale.home.tables.UPLOAD_DATE }}</th>
                 <th>{{ locale.home.tables.ACTIONS }}</th>
             </tr>
-            {% for i in images %}
+            {% for i in files %}
                 <tr id="{{ i.discrim }}">
-                    <td>{{ i.image_id }}</td>
-                    <td><a href="{{ url_for('static', filename='uploads/{{ i.discrim }}') }}">{{ i.discrim }}</a></td>
+                    <td>{{ i.file_id }}</td>
+                    <td><a href="{{ url_for('static', filename='uploads/' + i.discrim) }}">{{ i.discrim }}</a></td>
                     <td>{{ i.created_at_friendly }}</td>
                     <td>
-                        <button class="action-button red-button tooltip" onclick="delete_image('{{ i.discrim }}')">
+                        <button class="action-button red-button tooltip" onclick="delete_file('{{ i.discrim }}')">
                             <i class="fas fa-trash"></i>
-                            <span class="tooltiptext">{{ locale.home.buttons.DELETE_IMAGE }}</span>
+                            <span class="tooltiptext">{{ locale.home.buttons.DELETE_FILE }}</span>
                         </button>
                     </td>
                 </tr>
