--- a/imagoweb/templates/admin/files.html
+++ b/imagoweb/templates/admin/files.html
@@ -13,7 +13,7 @@
             {% for i in files %}
                 <tr id="{{ i.discrim }}">
                     <td>{{ i.file_id }}</td>
-                    <td><a href="{{ url_for('static', filename='uploads/' + i.discrim) }}">{{ i.discrim }}</a></td>
+                    <td><a href="{{ url_for('static', filename='uploads/' + i.discrim) }}" target="_blank">{{ i.discrim }}</a></td>
                     <td>{{ i.owner.username }}</td>
                     <td>{{ i.created_at_friendly }}</td>
                     <td>
