--- a/imagoweb/templates/home/extends/sidenav.html
+++ b/imagoweb/templates/home/extends/sidenav.html
@@ -1,4 +1,5 @@
 <div class="sidenav">
     <a class="sidenav-item" href="/home"><i class="fas fa-user"></i> &nbsp;&nbsp;{{ locale.home.nav.ACCOUNT }}</a>
     <a class="sidenav-item" href="/home/files"><i class="fas fa-file-alt"></i> &nbsp;&nbsp;{{ locale.home.nav.FILES }}</a>
+    <a class="sidenav-item" href="/home/urls"><i class="fas fa-link"></i> &nbsp;&nbsp;{{ locale.home.nav.URLS }}</a>
 </div>
