Add url shortening and badge to superuser name.

--- a/imagoweb/static/styles/form.css
+++ b/imagoweb/static/styles/form.css
@@ -79,6 +79,9 @@
   transition: border-color .2s ease-in-out;
   cursor: text;
 }
+.input-box.blocked {
+  
+}
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus,
