--- a/imagoweb/templates/admin/base.html
+++ b/imagoweb/templates/admin/base.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/table.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/buttons.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/tooltip.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/tags.css') }}">
     <meta id="data-proxy" data-user-id="{{ user.user_id }}">
 {% endblock %}
 
