--- a/imagoweb/templates/home/extends/nav_bar.html
+++ b/imagoweb/templates/home/extends/nav_bar.html
@@ -1,5 +1,5 @@
 <ul class="nav">
-    <li class="nav-item left"><a class="nav-banner" href="https://github.com/milasoftwaregroup/imago"><i class="fab fa-github"></i> &nbsp;&nbsp;{{ locale.home.nav.PROJECT_TITLE }}</a></li>
+    <li class="nav-item left"><a class="nav-banner" href="https://github.com/milasoftwaregroup/imago" target="_blank"><i class="fab fa-github"></i> &nbsp;&nbsp;{{ locale.home.nav.PROJECT_TITLE }}</a></li>
     <li class="nav-item right"><a href="/api/logout"><i class="fas fa-sign-out-alt"></i></a></li>
     {% if user.is_admin %}
         <li class="nav-item right"><a href="/home/admin"><i class="fas fa-lock"></i></a></li>
