--- a/imagoweb/templates/base.html
+++ b/imagoweb/templates/base.html
@@ -7,6 +7,8 @@ Copyright (C) Mila Software Group 2018-2020
 <html>
 <head>
     <meta id="version-proxy" data-version-info='{{ version|tojson }}'>
+    {{ metadata|safe }}
+
     {% include "extends/head.html" %}
     {% block head_imports %}
     {% endblock %}
