--- a/imagoweb/templates/login.html
+++ b/imagoweb/templates/login.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block base_body_content %}
-    <div class="login-container">
+    <form class="login-container">
         <div class="banner red-banner white-text">{{ locale.login.form.INVALID_CREDS }}</div>
 
         <div class="field-container">
@@ -25,7 +25,7 @@
         </div>
         
         <button type="submit" class="submit-button blue-button" onclick="login()">{{ locale.login.buttons.LOGIN }}</button>
-    </div>
+    </form>
 {% endblock %}
 
 {% block scripts %}
