--- a/imagoweb/templates/login.html
+++ b/imagoweb/templates/login.html
@@ -24,7 +24,7 @@
             <input class="input-box" id="password-box" type="password" placeholder value>
         </div>
         
-        <button type="submit" class="submit-button blue-button" onclick="login()">{{ locale.login.buttons.LOGIN }}</button>
+        <input type="submit" class="submit-button blue-button" onclick="login()" value="{{ locale.login.buttons.LOGIN }}">
     </form>
 {% endblock %}
 
