--- a/website/static/styles/login.css
+++ b/website/static/styles/login.css
@@ -4,7 +4,7 @@
 
 .hero.is-success {
     background: url("") no-repeat center center fixed;
-    background-color: white;
+    /* background-color: white; */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
